// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render SmallMovieCard Video is not playing 1`] = `
<article
  className="small-movie-card catalog__movies-card"
>
  <div
    className="small-movie-card__image"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <img
      alt="Mind Hunter"
      height="175"
      src="/img/mindhunter.jpg"
      width="280"
    />
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      onClick={[Function]}
    >
      Mind Hunter
    </a>
  </h3>
</article>
`;

exports[`Render SmallMovieCard Video is playing 1`] = `
<article
  className="small-movie-card catalog__movies-card"
>
  <div
    className="small-movie-card__image"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <video
      muted={true}
    />
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      onClick={[Function]}
    >
      Mind Hunter
    </a>
  </h3>
</article>
`;
